// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-fs schema should execute writeFile mutation 1`] = `
Object {
  "data": Object {
    "writeFile": Object {
      "name": "test.txt",
    },
  },
}
`;

exports[`graphql-fs schema should ls Mother 1`] = `
Object {
  "data": Object {
    "ls": Array [
      Object {
        "ls": Array [
          Object {
            "name": "Clancy_Bouvier.jpg",
            "type": "File",
          },
        ],
        "name": "Father",
        "parent": "Mother",
        "type": "Dir",
      },
      Object {
        "name": "Marge_Simpson.png",
        "type": "File",
      },
      Object {
        "ls": Array [
          Object {
            "name": "Jacqueline_Bouvier.gif",
            "type": "File",
          },
        ],
        "name": "Mother",
        "parent": "Mother",
        "type": "Dir",
      },
      Object {
        "name": "Patty_Bouvier.png",
        "type": "File",
      },
      Object {
        "name": "Selma_Bouvier.png",
        "type": "File",
      },
    ],
  },
}
`;

exports[`graphql-fs schema should ls root dir 1`] = `
Object {
  "data": Object {
    "ls": Array [
      Object {
        "name": "Bart_Simpson.png",
        "type": "File",
      },
      Object {
        "ls": Array [
          Object {
            "name": "Father",
            "type": "Dir",
          },
          Object {
            "name": "Homer_Simpson.png",
            "type": "File",
          },
          Object {
            "name": "Mother",
            "type": "Dir",
          },
        ],
        "name": "Father",
        "type": "Dir",
      },
      Object {
        "name": "Lisa_Simpson.png",
        "type": "File",
      },
      Object {
        "name": "Maggie_Simpson.png",
        "type": "File",
      },
      Object {
        "ls": Array [
          Object {
            "name": "Father",
            "type": "Dir",
          },
          Object {
            "name": "Marge_Simpson.png",
            "type": "File",
          },
          Object {
            "name": "Mother",
            "type": "Dir",
          },
          Object {
            "name": "Patty_Bouvier.png",
            "type": "File",
          },
          Object {
            "name": "Selma_Bouvier.png",
            "type": "File",
          },
        ],
        "name": "Mother",
        "type": "Dir",
      },
    ],
  },
}
`;

exports[`graphql-fs schema should query files and dirs 1`] = `
Object {
  "data": Object {
    "dirs": Array [
      Object {
        "dirs": Array [
          Object {
            "name": "Father",
            "type": "Dir",
          },
          Object {
            "name": "Mother",
            "type": "Dir",
          },
        ],
        "files": Array [
          Object {
            "name": "Homer_Simpson.png",
            "type": "File",
          },
        ],
        "name": "Father",
        "type": "Dir",
      },
      Object {
        "dirs": Array [
          Object {
            "name": "Father",
            "type": "Dir",
          },
          Object {
            "name": "Mother",
            "type": "Dir",
          },
        ],
        "files": Array [
          Object {
            "name": "Marge_Simpson.png",
            "type": "File",
          },
          Object {
            "name": "Patty_Bouvier.png",
            "type": "File",
          },
          Object {
            "name": "Selma_Bouvier.png",
            "type": "File",
          },
        ],
        "name": "Mother",
        "type": "Dir",
      },
    ],
    "files": Array [
      Object {
        "name": "Bart_Simpson.png",
        "type": "File",
      },
      Object {
        "name": "Lisa_Simpson.png",
        "type": "File",
      },
      Object {
        "name": "Maggie_Simpson.png",
        "type": "File",
      },
    ],
  },
}
`;
